# Mines-Courses

./: .gitmodules  CMakeLists.txt  README.md  index.md
Mines Courses/CSCI_252/DistoPod/DistoPod/: Coordinate.py  DataPlotter.cs  DistoPodGUI.py  DistoPodMain.py  PCA9685.py  lidar_lite.py  madgwickahrs.py  mpu9250.py  servo.py
Mines Courses/CSCI_252/DistoPod/IndividualParts/: Angle Conversion.py  ContServoTest.py  Coordinate.py  EarlyPrototype.py  MadgwickAHRS.py  ServoTest.py  calibration.py
Mines Courses/CSCI_252/DistoPod/Information/: OVERVIEW.txt  UserInterface.txt
Mines Courses/CSCI_252/DistoPod/MPU_ONLY/: MPU_TEST.py  (+3 more)
Mines Courses/CSCI_252/Lab 1 - Blink/: blink.py
Mines Courses/CSCI_252/Lab 2 - Light/: Light_with_Extensions.py
Mines Courses/CSCI_252/Lab 3 - Sound/: sound.py
Mines Courses/CSCI_252/Lab 4 - Acceleration/: Lab4 Acceleration.py
Mines Courses/CSCI_252/Lab 5 - Magnetism/: MagneticLab5.py  MagneticLab5_OO.py
Mines Courses/CSCI_261/FP/: Pong.cpp  Pong.h  a.out  final.txt  main.cpp
Mines Courses/CSCI_262/Binary Tree/: binarytree.dsp  binarytree.ncb  bintree.template  useful.cpp  useful.h
Mines Courses/CSCI_262/Postfix_Calculator/: Makefile  README.txt  calculator_main.cpp  postfix_calculator.cpp  postfix_calculator.h
Mines Courses/CSCI_274/: CHEATSHEET.LNX
Mines Courses/CSCI_303/: python.ipynb  visulization.ipynb
Mines Courses/CSCI_303/Activities/: 03-fitting.ipynb  05-Data Visualization.ipynb  06-cluster-new.ipynb  07-ml-beginnings-2.ipynb  18-unsupervised.ipynb
Mines Courses/CSCI_303/Project 5 Classification/: 05-classify-new.ipynb
Mines Courses/CSCI_306/: Stove.java
Mines Courses/CSCI_306/C07A Final/: .project  Software Engineering C07A attachment.docx
Mines Courses/CSCI_306/EclipsePlay/: answers.txt
Mines Courses/CSCI_306/JBatIndividual/: .project
Mines Courses/CSCI_306/JBatPair/: .project
Mines Courses/CSCI_306/PublicSafety/: .project
Mines Courses/CSCI_358/: HW3.asm  HW4.asm
Mines Courses/CSCI_400/Qiskit/: Qiskit SVM Language Explore.ipynb  grover_hash.ipynb  pyopencl-2018.2.5+cl12-cp36-cp36m-win32 (1).whl  pyopencl-2018.2.5+cl12-cp36-cp36m-win_amd64 (1).whl  pyopencl-2018.2.5+cl21-cp36-cp36m-win32.whl  pyopencl-2018.2.5+cl21-cp36-cp36m-win_amd64.whl  shor_algorithm.ipynb
Mines Courses/CSCI_400/SlytherLisp/: .flake8  README.rst  make_submission.sh  report - Copy.html  report.html  report1.html  setup - Copy.py  slytherlisp-grader-script.sh  submission.tar.bz2
Mines Courses/CSCI_400/carsonstevens_HW2/: .gitignore  README - Copy.rst  hw-2.rkt  language.rkt
Mines Courses/CSCI_403/: project6.sql
Mines Courses/CSCI_403/Project 9/: Project 9 - Mushrooms.ipynb  UCI Machine Learning Repository_ Mushroom Data Set.html
Mines Courses/CSCI_406/AlgoBowl/: a.out  compare_arrival.h  compare_length.h  compare_processID.h  input_50.txt  job.h  main.cpp  plan.txt  small.txt  workstation.h
Mines Courses/CSCI_406/BinPacking/: main.cpp
Mines Courses/CSCI_406/DP/: main.cpp
Mines Courses/CSCI_406/Maze/: Makefile  input.txt  maze
Mines Courses/CSCI_406/TSP/: Results.txt  TSP.txt  main.cpp  point.h  test.cpp
Mines Courses/CSCI_423/Critical_Paths/: SAN1.txt  uniform1.txt
Mines Courses/CSCI_423/NES_SIS/: main.cpp
Mines Courses/CSCI_423/NES_SSQ/: main.cpp
Mines Courses/CSCI_423/NES_TimeShareSystem/: main.cpp
Mines Courses/CSCI_437/: Lab1.m  Lab_2_Image_Transformations.asv  Lab_2_Image_Transformations.m  mymovie.avi
Mines Courses/CSCI_437/Fall2019/: Lab3_template_matching.m  Lab_2_Image_Transformations.asv  Template_Matching.m
Mines Courses/CSCI_437/Fall2020/: helpers.ipynb
Mines Courses/CSCI_440/homework1_Carson_Stevens/: CMakeLists.txt  homework1_Carson_Stevens.cpp  m1.txt  main.cpp  test.cpp  test2.cpp
Mines Courses/CSCI_440/homework2_Carson_Stevens/: Homework2_1.cu  Homework2_2.cu
Mines Courses/CSCI_440/homework3_Carson_Stevens/: Carson_Stevens_homework3.cu  homework  sm1.txt  sm2.txt
Mines Courses/CSCI_440/homework4_Carson_Stevens/: homework4_Carson_Stevens.cu
Mines Courses/CSCI_442/Project_0/: Makefile  README.txt  example_input1_part2.txt  part1.cpp  part2.cpp
Mines Courses/CSCI_445/: CSCI 445 Fall 2020 Exam 2.docx  Carson_Stevens_CSCI445_Exam.docx  resume_Carson_Stevens.html
Mines Courses/CSCI_445/Advanced HTML & CSS/: aboutme.html
Mines Courses/CSCI_445/HTML + CSS/: aboutme.css  aboutme.html  index.html  styles.css  turtlecoders.css
Mines Courses/CSCI_455/: CSCI 555_455_ Game Theory & Networks - Lecture 3 - Nash Equilibrium by DJ Yang on Prezi Next.html
Mines Courses/CSCI_455/CSCI 555_455_ Game Theory & Networks - Lecture 3 - Nash Equilibrium by DJ Yang on Prezi Next_files/: 291059134405770  7875992072a9.css  8b58ee68f8f3.css  gtm.js.download  hotjar-67374.js.download  presentation_react_app.js.download  webviewer-wasm.js.download
Mines Courses/CSCI_455/Game of Life/: Conway's Game of Life' Patterns.html  Game of Life - Scholarpedia.html  Let’s evolve a neural network with a genetic algorithm—code included _ by Matt Harvey _ Coastline Automation.html  Reversing Game of Life Using Genetic Algorithms _ by Pavel Tyshevskyi _ Medium.html  deep-neuroevolution-genetic-algorithms-are-a-competitive-alternative-for-training-deep-neural-822bfe3291f5.html
Mines Courses/CSCI_455/HW1/: HW1_Game_Calc.ipynb
Mines Courses/CSCI_455/HW2/: Game Tree.afdesign
Mines Courses/CSCI_470/Exercises/: 05_SL_Regularization.ipynb
Mines Courses/CSCI_470/Projects/: Style Demo.ipynb  style_transfer.ipynb
Mines Courses/CSCI_475/Lectures/: CSCI475585-Week01_1.pptx  CSCI475585-Week01_2.pptx  CSCI475585-Week02_1.pptx  CSCI475585-Week02_2.pptx  CSCI475585-Week03.pptx  CSCI475585-Week04.pptx
Mines Courses/CSCI_477/Blockhead Poker/: AlphaPlayer.cpp  AlphaPlayer.h  Bet.cpp  Bet.h  BetHistory.cpp  BetHistory.h  BetaPlayer.cpp  BetaPlayer.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  Hand.cpp  Hand.h  HumanPlayer.cpp  HumanPlayer.h  Makefile  Notes.txt  Player.cpp  Player.h  blockhead_poker.cpp
Mines Courses/CSCI_477/Game Map/: main.cpp
Mines Courses/CSCI_477/carson_stevens_APR3_Dijkstra/: graph  main.cpp
(+740 files in other folders)
